# CardsAgainstHumanityBoardGame

./: README.md
Alf_gui/: CMakeLists.txt  loginview.cpp  loginview.h  loginview.ui  main.cpp  menuview.cpp  menuview.h  menuview.ui  registerview.cpp  registerview.h  registerview.ui  roomlistitem.cpp  roomlistitem.h  roomlistitem.ui  windowcontroller.cpp  windowcontroller.h  windowcontroller.ui
CardsAgainstHumanity/: CardsAgainstHumanity.pro  CardsAgainstHumanity.pro.user.929511e  GameView.qml  LoginView.qml  MainMenuView.qml  RegisterView.qml  main.cpp  main.qml  main.qml.autosave  networkcontroller.cpp  networkcontroller.h  qml.qrc  windowcontroller.cpp  windowcontroller.h
CardsAgaintsHumanityAPI/: HELP.md  pom.xml
CardsAgaintsHumanityAPI/Postman tests/: CAH.postman_collection.json
CardsAgaintsHumanityAPI/Test coverage/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Postman tests/: CAH.postman_collection.json
Test coverage/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Test coverage/ns-1/: index_SORT_BY_BLOCK.html  index_SORT_BY_NAME_DESC.html
Test coverage/ns-2/: index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Test coverage/ns-3/: index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html
Test coverage/ns-4/: index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html
Test coverage/ns-5/: index_SORT_BY_BLOCK_DESC.html  (+2 more)
(+126 files in other folders)
